<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 Krumbs Inc
  ~ All rights reserved.
  ~
  -->
<resources>
    <string name="krumbssdk_app_id">f4HQJDDL5ORlCS3zWMGvIx6m4VrcZ_PloU4BDH3Im-Y=</string>
    <string name="krumbssdk_client_key">xCDPftDsEgVACQcMrQzYbWn83GIF2USIyviQJ8REqT8=</string>

    <string name="clarifai_client_id">iHhYlH55Vhkk2XsV-ucG5TddwM-NH1Zne5lTqWjE</string>
    <string name="clarifai_client_secret">jQELXrDppUgSHtp4N39HKoNjHACu0oMVIIudeiwQ</string>

    <string name="edamam_app_id">0cbe9f06</string>
    <string name="edamam_app_key">166aaed6063736b531c131709213b00f</string>

    <string name="app_name">Food Log</string>

    <string name="krumbs_sdk_app">Krumbs SDK Application</string>
    <string name="action_settings">Settings</string>
    <string name="kcapturebuttonLabel">Start K-Capture</string>

    <string name="calorie">Calorie</string>
    <string name="weight">Total Weight</string>
    <string name="fat">Fat</string>
    <string name="proteint">Protein</string>
    <string name="carbs">Carbohydrates</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

</resources>
