<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/calorie"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_calorie_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/weight"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_weight_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/fat"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_fat_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/proteint"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_protein_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/carbs"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_carbs_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>
    </TableLayout>
</LinearLayout>