<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AnalyzeNutritionActivity">
    <ProgressBar
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:id="@+id/pb_processing"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log!"
            android:id="@+id/bn_return"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:id="@+id/tv_display_weight"
                android:text="100g"/>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sb_change_weight"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/weight"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_weight_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/calorie"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_calorie_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/fat"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_fat_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/proteint"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_protein_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/carbs"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tv_carbs_value"
                android:textSize="@dimen/item_text_size"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/foodscore"
                android:textSize="30sp"/>
        </TableRow>

        <TextView
            android:id="@+id/foodscore_value"
            android:textSize="80sp"
            android:layout_marginTop="27dp"
            android:layout_gravity="center"/>

    </TableLayout>
</LinearLayout>